# FireAndroidBase

./: .gitignore  README.md  build.gradle  settings.gradle
aimodel/: build.gradle
aimodel/src/main/: AndroidManifest.xml
aimodel/src/main/assets/: best.torchscript.ncnn.param
aimodel/src/main/java/com/fireaicv/aimodel/: AIModel.java  OpenCameraActivity.java
aimodel/src/main/jni/: CMakeLists.txt  pose_jni.cpp  yolov7.cpp  yolov7.h
aimodel/src/main/jni/opencv-mobile-4.8.1-android/sdk/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/fireaicv/demo/: MainActivity.java
app/src/main/res/drawable/: button_drawable.xml  button_drawable2.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
